--- a/index.html
+++ b/index.html
@@ -139,6 +139,17 @@
       .streakbar { font-size: 0.98em;}
       .levelbar { font-size: 0.88em;}
 
+	#leaderboardSticky {
+	  position: fixed;
+	  left: 0; right: 0; bottom: 0;
+	  z-index: 50;
+	  width: 100vw;
+	  background: none;
+	  pointer-events: none;
+	  display: flex;
+	  justify-content: center;
+	  padding-bottom: env(safe-area-inset-bottom, 0);
+	}
 	.leaderboard-container {
 	  width: 96vw; max-width: 560px;
 	  margin: 0 auto 12px auto;
@@ -284,54 +295,7 @@
 	  visibility: visible;
 	  opacity: 1;
 	}
-
-	/* Collapsible leaderboard - mobile only */
-	@media (max-width: 520px) {
-	  .mobile-lb-btn { 
-	    display: block !important; 
-	    width: 90%; 
-	    padding: 11px 0; 
-	    background: linear-gradient(90deg,#ffe46c,#55f191); 
-	    color: #232346; 
-	    border: none; 
-	    border-radius: 14px; 
-	    font-weight: bold; 
-	    font-size: 1.14em; 
-	    box-shadow: 0 2px 8px #0004;
-	    margin-bottom: 10px;
-	    cursor:pointer;
-	  }
-	  .collapsible-leaderboard {
-	    display: none;
-	    max-width: 99vw;
-	    margin: 0 auto;
-	    position: static !important;
-	    background: none;
-	    box-shadow: none;
-	    z-index: 1;
-	    padding-bottom: 0;
-	  }
-	  .collapsible-leaderboard.show {
-	    display: block;
-	  }
-	  /* Remove sticky on mobile */
-	  #leaderboardSticky {
-	    position: static !important;
-	    left: unset; right: unset; bottom: unset;
-	    width: 100%;
-	    pointer-events: all;
-	    background: none;
-	    box-shadow: none;
-	    padding-bottom: 0;
-	    margin: 0;
-	  }
-	}
-	@media (min-width: 521px) {
-	  .mobile-lb-btn { display:none !important; }
-	  .collapsible-leaderboard { display:block !important; }
-	}
-
-	  
+	
   </style>
   <!-- SOUNDS -->
   <audio id="soundLevelUp" src="/assets/audio/levelup.mp3" preload="auto"></audio>
@@ -384,12 +348,9 @@
 		<span class="tooltip">Mute/Unmute Sound</span>
 	  </span>
 	</div>
-	<!-- COLLAPSIBLE LEADERBOARD MOBILE BUTTON -->
-	<button id="toggleLbBtn" class="mobile-lb-btn" type="button" style="display:none;margin:14px auto 3px auto;">🏆 Show Leaderboard</button>
-	<!-- Collapsible leaderboard -->
-	<div id="leaderboardSticky" class="collapsible-leaderboard"></div>
   </div>
-
+  <!-- Sticky leaderboard, always visible at bottom -->
+  <div id="leaderboardSticky"></div>
   <div id="footer" class="copyright">
     Monkeyy.app is not affiliated with monkey.app.<br>
     For entertainment only. Grind responsibly.
@@ -1298,58 +1259,13 @@
 	});
 
 
-	document.addEventListener('DOMContentLoaded', () => {
-	  updateBars();
-	  showLeaderboard();
-	  setInterval(showLeaderboard, 5000);
-	  setInterval(updateBars, 3300);
+    document.addEventListener('DOMContentLoaded', ()=>{
+      updateBars();
+      showLeaderboard();
+      setInterval(showLeaderboard, 5000);
+      setInterval(updateBars, 3300);
+    });
 	
-	  // Collapsible leaderboard logic
-	  function isMobile() { return window.innerWidth <= 520; }
-	  const lbBtn = document.getElementById('toggleLbBtn');
-	  const lbBox = document.getElementById('leaderboardSticky');
-	
-	  // Persist lbOpen state per session (so doesn't auto-close on updates)
-	  let lbOpen = sessionStorage.getItem('bananaLbOpen') === '1';
-	
-	  function updateMobileLbUI() {
-	    if (isMobile()) {
-	      lbBtn.style.display = 'block';
-	      if (lbOpen) {
-	        lbBox.classList.add('show');
-	        lbBtn.innerText = "⬆️ Hide Leaderboard";
-	      } else {
-	        lbBox.classList.remove('show');
-	        lbBtn.innerText = "🏆 Show Leaderboard";
-	      }
-	    } else {
-	      lbBtn.style.display = 'none';
-	      lbBox.classList.add('show');
-	      lbOpen = false;
-	    }
-	  }
-	  lbBtn.onclick = () => {
-	    lbOpen = !lbOpen;
-	    sessionStorage.setItem('bananaLbOpen', lbOpen ? '1' : '');
-	    if (lbOpen) {
-	      lbBox.classList.add('show');
-	      lbBtn.innerText = "⬆️ Hide Leaderboard";
-	    } else {
-	      lbBox.classList.remove('show');
-	      lbBtn.innerText = "🏆 Show Leaderboard";
-	    }
-	  };
-	  // On leaderboard update, preserve open/closed state
-	  const oldShowLeaderboard = window.showLeaderboard;
-	  window.showLeaderboard = async function() {
-	    await oldShowLeaderboard();
-	    updateMobileLbUI();
-	  };
-	
-	  updateMobileLbUI();
-	  window.addEventListener('resize', updateMobileLbUI);
-	});
-
 
 	
 	if (Date.now() < shadowbanUntil) {
