--- a/index.html
+++ b/index.html
@@ -384,8 +384,10 @@
 	  </span>
 	</div>
   </div>
-  <!-- Sticky leaderboard, always visible at bottom -->
-  <div id="leaderboardSticky"></div>
+  <!-- COLLAPSIBLE LEADERBOARD MOBILE BUTTON -->
+  <button id="toggleLbBtn" class="mobile-lb-btn" type="button" style="display:none;margin:14px auto 3px auto;">🏆 Show Leaderboard</button>
+  <!-- Collapsible leaderboard -->
+  <div id="leaderboardSticky" class="collapsible-leaderboard"></div>
   <div id="footer" class="copyright">
     Monkeyy.app is not affiliated with monkey.app.<br>
     For entertainment only. Grind responsibly.
