--- a/index.html
+++ b/index.html
@@ -252,7 +252,7 @@
 	  .leaderboard-row { font-size: .98em; padding: 6px 4vw 6px 3vw; }
 	}
 
-      .main {padding-bottom:34vh;}
+      .main {padding-bottom:0;}
       .share-modal {min-width:94vw;}
     }
 	
