--- a/index.html
+++ b/index.html
@@ -247,6 +247,9 @@
 	  background: linear-gradient(90deg,#ffe46c,#55f191);
 	  color: #181820;
 	}
+	.leaderboard-row .meta {
+	  display: none !important;
+	}
 	@media (max-width: 540px) {
 	  .leaderboard-container { padding: 7px 3px 3vw 3px; }
 	  .leaderboard-row { font-size: .98em; padding: 6px 4vw 6px 3vw; }
